src/objects/Property_Description_SDA__c.object
<CustomObject>
    <fields>
        <fullName>c_address__c</fullName>
        <label>Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_boh_prop_cd__c</fullName>
        <label>Boh property</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_brand_desc__c</fullName>
        <label>Brand description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_brand_sort__c</fullName>
        <label>Brand sort</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_city_name__c</fullName>
        <label>City name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_class_level__c</fullName>
        <label>Class level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_country_desc__c</fullName>
        <label>Country description</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_country_sort__c</fullName>
        <label>Country sort</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_county_name__c</fullName>
        <label>County name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_division_desc__c</fullName>
        <label>Division description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_hr_prop_cd__c</fullName>
        <label>Hr property</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_labor_prop_cd__c</fullName>
        <label>Labor property</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_phone_number__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c_prop_alt2_cd__c</fullName>
        <label>Alt property 2</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_alt_cd__c</fullName>
        <label>Alt property</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_desc2__c</fullName>
        <label>Property description 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_desc3__c</fullName>
        <label>Property description 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_desc4__c</fullName>
        <label>Property description 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_property_type__c</fullName>
        <label>Property type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rms_prop_cd__c</fullName>
        <label>Rms property</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rr_tax_flag__c</fullName>
        <label>Tax flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_state_group__c</fullName>
        <label>State group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_state_group_sort__c</fullName>
        <label>State group sort</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_sub_division_desc__c</fullName>
        <label>Subdivision description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_tpss_prop_cd__c</fullName>
        <label>Tpss property</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_user_flag_10__c</fullName>
        <label>User flag 10</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_user_flag_11__c</fullName>
        <label>User flag 11</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_user_flag_1__c</fullName>
        <label>User flag 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_zip_cd__c</fullName>
        <label>Zip</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_ggr_tax_rate__c</fullName>
        <label>TaxRate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_ggr_tax_rate_other__c</fullName>
        <label>TaxRate Other</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_ggr_tax_rate_slot__c</fullName>
        <label>TaxRate Slot</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_ggr_tax_rate_table__c</fullName>
        <label>TaxRate Table</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_latitude__c</fullName>
        <label>Latitude</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_longitude__c</fullName>
        <label>Longitude</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_user_amt_10__c</fullName>
        <label>User amount 10</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_user_amt_11__c</fullName>
        <label>User amount 11</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_user_amt_12__c</fullName>
        <label>User amount 12</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_division_sort__c</fullName>
        <label>Division sort</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_prop_sort2__c</fullName>
        <label>Property sort 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_prop_sort3__c</fullName>
        <label>Property sort 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_prop_sort4__c</fullName>
        <label>Property sort 4</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_sub_division_sort__c</fullName>
        <label>Subdivision sort</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_user_score_1__c</fullName>
        <label>User score 1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_user_score_2__c</fullName>
        <label>User score 2</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_user_score_3__c</fullName>
        <label>User score 3</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Property Description SDA</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Description SDA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>